FIX
I fix the swagger and now it works
